# jsonstorage

./: .gitignore  README.md  app.py  config.yaml  pyproject.toml  requirements.in  requirements.txt  test.http
jsonstorage/: __init__.py  auth.py  config.py  ws.py
